RESOLVED FIXED234752
Modal container observer fails detection when rendered text is inserted after the container
https://bugs.webkit.org/show_bug.cgi?id=234752
Summary Modal container observer fails detection when rendered text is inserted after...
Wenson Hsieh
Reported 2021-12-30 08:53:02 PST
.
Attachments
For EWS (6.03 KB, patch)
2022-01-10 08:40 PST, Wenson Hsieh
thorton: review+
ews-feeder: commit-queue-
Patch for landing (6.09 KB, patch)
2022-01-10 10:33 PST, Wenson Hsieh
no flags
Radar WebKit Bug Importer
Comment 1 2022-01-06 08:53:32 PST
Wenson Hsieh
Comment 2 2022-01-10 08:40:10 PST
Wenson Hsieh
Comment 3 2022-01-10 10:28:25 PST
Thanks for the review!
Wenson Hsieh
Comment 4 2022-01-10 10:33:58 PST
Created attachment 448770 [details] Patch for landing
EWS
Comment 5 2022-01-10 11:21:04 PST
Committed r287849 (245898@main): <https://commits.webkit.org/245898@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 448770 [details].
Note You need to log in before you can comment on or make changes to this bug.