Modal container observer fails detection when rendered text is inserted after the container https://bugs.webkit.org/show_bug.cgi?id=234752 rdar://87200177

Reviewed by Tim Horton.

Source/WebCore:

Teach ModalContainerObserver to detect modal containers whose text content is set by script after the container
element itself has already been inserted into the document and laid out. See below for more details.

Test: ModalContainerObservation.DetectModalContainerAfterSettingText

* page/ModalContainerObserver.cpp:
(WebCore::searchForMatch):

Change this to return two `bool`s: one indicating whether a match was found (i.e. the original return value),
and another indicating whether any rendered text was discovered in the process of searching. In the case where
the viewport-constrained element did not contain any rendered text at all, we avoid adding the element to the
`m_elementsToIgnoreWhenSearching` set, thereby allowing us to search it again in the future.

(WebCore::ModalContainerObserver::updateModalContainerIfNeeded):
(WebCore::containsMatchingText): Deleted.

Tools:

Add a new API test to exercise the change.

* TestWebKitAPI/Tests/WebKitCocoa/ModalContainerObservation.mm:
(TestWebKitAPI::TEST):



Canonical link: https://commits.webkit.org/245898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287849 268f45cc-cd09-0410-ab3c-d52691b4dbfc